fixed overlaping of achievement list in mob view

--- a/assets/css/about_us3.css
+++ b/assets/css/about_us3.css
@@ -54,8 +54,7 @@
 }
 .int_about_section2 .about_contentbox {
     padding: 0;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 50px;
 }
 .about_content{
     padding-bottom: 40px;
@@ -218,9 +217,6 @@
 
 
 @media(max-width: 992px){
-    *{
-        height: auto;
-    }
     .vision_image_wrapper{
         padding-top: 50px;
     }
